--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Us</h2>
                 <p>Feel free to email us to provide some feedback on our app, give us suggestions for improvements.</p>
-                <p><a href="mailto:feedback@distresscall.com">feedback@distresscall.me</a>
+                <p><a href="mailto:feedback@distresscall.me">feedback@distresscall.me</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
