--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Distress Call</h1>
-                        <p class="intro-text">A free, safe, innovative app.</p>
+                        <p class="intro-text">A free and intelligent app.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -129,9 +129,16 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Distress Call</h2>
-                <p>Distress Call is a free  <a href="https://github.com/jingsh/HackNC2015">app</a>. </p>
-                <p>This app features  <a href="https://github.com/jingsh/HackNC2015">XXXX</a> along with a custom Google Maps access.</p>
-                <p>Distress Call includes ios App and website.</p>
+                <p>Distress Call is a free iOS app that can understand your secret voice instructions and alert your contacts when you need help. </p>
+                    <ul>
+                        <li> Using advanced natual language processing techniques; </li>
+                        <li> Sending messages to your friends; </li>
+                        <li> Calling your friends or 911 with pre-recoreded voice messages;</li>
+                        <li> Sending your GPS location and making an audible alarm.</li>
+                    </ul>
+
+                <!--<p>By utilizing advanced natural language processing techniques, Distress Call automatically responses to  your secret instructions which are only understandable between you and Distress Call. You can set several "secret words" with different actions, or even help you escape from uncomfortable dating and similar situation.</p>-->
+                <!---<p>Distress Call includes a iOS app and a website.</p>--->
             </div>
         </div>
     </section>
@@ -154,8 +161,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Us</h2>
-                <p>Feel free to email us to provide some feedback on our app, give us suggestions for improvements.</p>
-                <p><a href="mailto:feedback@distresscall.me">feedback@distresscall.me</a>
+                <p>Feel free to email us to provide some feedback on our app.</p>
+                <p><a href="mailto:feedback@distresscall.com">feedback@distresscall.me</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
